--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body{
   color:rgba(231,54,78,1.0);
 }
 
-/* 스크롤 가능한 캔버스 */
+/* 스크롤 가능한 캔버스 *//
 #canvas{ position:relative; width:100%; height:190vh; }
 
 /* LAYERS */
@@ -792,3 +792,4 @@ function resolveCollisions(){
 <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
 </body>
 </html>
+
